# lab04hw

./: .Build_and_test.yml  CMakeLists.txt  README.md
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt  formatter.cpp
hello_world_application/: CMakeLists.txt  hello_world.cpp
solver_application/: CMakeLists.txt  equation.cpp
solver_lib/: CMakeLists.txt  solver.cpp
